--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,17 @@
 	width: 100%;
 }
 
+
+#main-header .port-item{
+	width: 25%;
+}
+
+
+#main-header .port-item:hover {
+	opacity: 0.7;
+	cursor: pointer;
+}
+
 .bg-black{
 	color:white;
 	background: black;
