--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 
 
 #main-header .port-item{
-	width: 25%;
+	width: 30%;
+	height: 100%;
 }
 
 
@@ -17,4 +18,16 @@
 .bg-black{
 	color:white;
 	background: black;
+}
+
+.blinking{
+	animation: blinkingText 2.0s infinite;
+}
+@keyframes blinkingText{
+    0%{     color: white; }
+    75%{    color:transparent;  }
+}
+.card{
+	width: 100%;
+	height: 100%;
 }
